# recipe-server

./: Cargo.toml  LICENSE  README.md  askama.toml
.sqlx/: query-01c5e0111a03b5c0f3997c0960c582f641ee6aa7ab8305d966d2ed4dc6dd0424.json
assets/static/: recipe.css  recipes.json
assets/templates/: index.html
migrations/: 0001_create.up.sql
src/: api.rs  error.rs  main.rs  recipe.rs  templates.rs  web.rs
