[package]
name = "recipe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.1"
axum = "0.8.3" 
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
axum-extra = "0.10.1"

[dependencies.tower-http]
version = "0.6.2"
features = ["fs"]